--- a/static/styles.css
+++ b/static/styles.css
@@ -22,18 +22,20 @@ body {
     border-radius: 30px;
     background-color: rgba(255, 255, 255, .1);
 }
-#overlay {
+#playersDot {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 1;
+    border-radius: 30px;
     filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 1));
 }
-#map_image {
+#mapCanvas {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 0;
+    border-radius: 30px;
     filter: drop-shadow(5px 5px 8px rgba(0, 0, 0, .7));
 }
 
@@ -68,6 +70,14 @@ body {
     text-align: center;
     font-size: 6vmin;
     font-family: 'HYWenHei-85W';
+}
+
+#player_status {
+    position: fixed;
+    opacity: 0;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, .1);
+
 }
 
 #bomb_status {
