--- a/templates/main.html
+++ b/templates/main.html
@@ -6,12 +6,14 @@
     <link rel="icon" href="static/icon.png">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <div id="radar">
-        <img id="map_image" src="/static/no_map.png" width="1024" height="1024" draggable="false">
-        <canvas id="overlay" width="1024" height="1024" draggable="false"></canvas>
+<!--        <img id="map_image" src="/static/no_map.png" width="1024" height="1024" draggable="false">-->
+        <canvas id="playersDot" width="1024" height="1024" draggable="false"></canvas>
+        <canvas id="mapCanvas" width="1024" height="1024" draggable="false"></canvas>
     </div>
 
     <div id="info_pop" onclick="hideInfoPop();">
