--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,7 @@
     <div id="radar">
 <!--        <img id="map_image" src="/static/no_map.png" width="1024" height="1024" draggable="false">-->
         <canvas id="playersDot" width="1024" height="1024" draggable="false"></canvas>
+        <canvas id="bombIcon" width="1024" height="1024" draggable="false"></canvas>
         <canvas id="mapCanvas" width="1024" height="1024" draggable="false"></canvas>
     </div>
 
